HighFreqFSK/USBFS_UART01.cydsn/REBUILD.log
--------------- Rebuild Started: 05/14/2018 17:02:35 Project: USBFS_UART01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\USBFS_UART01.cycdx"
Deleting file ".\USBFS_UART01.svd"
Deleting file ".\USBFS_UART01.rpt"
Deleting file ".\USBFS_UART01_timing.html"
cydsfit.exe -.appdatapath "C:\Users\sdysart\AppData\Local\Cypress Semiconductor\PSoC Creator\4.1" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p C:\Users\sdysart\Documents\UACS\UACS\HighFreqFSK\USBFS_UART01.cydsn\USBFS_UART01.cyprj -d CY8C5888LTI-LP097 -s C:\Users\sdysart\Documents\UACS\UACS\HighFreqFSK\USBFS_UART01.cydsn\Generated_Source\PSoC5 -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
ADD: pft.M0040: information: The following 6 pin(s) will be assigned a location by the fitter: \LCD:LCDPort(1)\, \LCD:LCDPort(2)\, \LCD:LCDPort(3)\, \LCD:LCDPort(4)\, \LCD:LCDPort(5)\, \LCD:LCDPort(6)\
Analog Placement...
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\ARM_GCC_541\Debug/main.lst -g -Wall -ffunction-sections -ffat-lto-objects -O0 -c main.c -o .\ARM_GCC_541\Debug\main.o
main.c: In function 'main':
main.c:126:33: warning: pointer targets in passing argument 2 of 'sprintf' differ in signedness [-Wpointer-sign]
                 sprintf(lineStr,buffer);
                                 ^
In file included from c:\program files (x86)\cypress\psoc creator\4.1\psoc creator\import\gnu\arm\5.4.1\arm-none-eabi\include\string.h:10:0,
                 from Generated_Source\PSoC5/CyLib.h:22,
                 from Generated_Source\PSoC5/USBUART.h:22,
                 from Generated_Source\PSoC5/project.h:23,
                 from main.c:29:
c:\program files (x86)\cypress\psoc creator\4.1\psoc creator\import\gnu\arm\5.4.1\arm-none-eabi\include\stdio.h:231:5: note: expected 'const char * restrict' but argument is of type 'uint8 * {aka unsigned char *}'
 int _EXFUN(sprintf, (char *__restrict, const char *__restrict, ...)
     ^
main.c:127:30: warning: pointer targets in passing argument 1 of 'strncmp' differ in signedness [-Wpointer-sign]
                 if (strncmp (buffer,"0",1) == 0)
                              ^
In file included from c:\program files (x86)\cypress\psoc creator\4.1\psoc creator\import\gnu\arm\5.4.1\arm-none-eabi\include\string.h:10:0,
                 from Generated_Source\PSoC5/CyLib.h:22,
                 from Generated_Source\PSoC5/USBUART.h:22,
                 from Generated_Source\PSoC5/project.h:23,
                 from main.c:29:
c:\program files (x86)\cypress\psoc creator\4.1\psoc creator\import\gnu\arm\5.4.1\arm-none-eabi\include\string.h:35:6: note: expected 'const char *' but argument is of type 'uint8 * {aka unsigned char *}'
 int  _EXFUN(strncmp,(const char *, const char *, size_t));
      ^
main.c:131:31: warning: implicit declaration of function 'atoi' [-Wimplicit-function-declaration]
                 data = (uint8)atoi(buffer);
                               ^
main.c:191:1: warning: multi-line comment [-Wcomment]
 //                    sprintf(lineStr,"BR:%4ld %d%c%s", USBUART_GetDTERate(),\
 ^
main.c:80:11: warning: unused variable 'state' [-Wunused-variable]
     uint8 state;
           ^
main.c:77:9: warning: variable 'flag0' set but not used [-Wunused-but-set-variable]
     int flag0 = 0;
         ^
main.c: At top level:
main.c:225:1: error: expected identifier or '(' before '}' token
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 05/14/2018 17:02:44 ---------------
